<resources>
    <string name="app_name">Shote Babajimi</string>
    <string name="range">Date Range</string>
    <string name="gender">Gender</string>
    <string name="countries">Countries</string>
    <string name="color">Color</string>
    <string name="colors">Colors</string>
    <string name="car_owner_name">Full Name</string>
    <string name="email_field">Email</string>
    <string name="country">Country</string>
    <string name="year">Year</string>
    <string name="model">Model/Make</string>
    <string name="gender_label">Gender</string>
    <string name="job_title">job Title</string>
    <string name="bio_label">Bio</string>
    <string name="lipsum_text">Cras mi pede, malesuada in, imperdiet et, commodo vulputate, justo. In blandit ultrices enim. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Proin interdum mauris non ligula pellentesque ultrices.</string>
    <string name="all">ALL</string>
    <string name="filter_title">My Filter</string>
    <string name="no_filters">Empty list of predefined filters</string>
    <string name="car_owners">Car Owners</string>
    <string name="no_results">Car owner(s) matching criteria not found</string>
    <string name="results_title">Car owners / %1$d - %2$d</string>
    <string name="results_list_count">%1$s results</string>
</resources>