<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ListItemCardViewStyle"
    android:layout_marginBottom="@dimen/list_item_vertical_margin"
    android:layout_marginTop="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_owner_name"
            android:textAppearance="@style/PropertyLabelStyle" />

        <TextView
            android:id="@+id/namesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/property_value_margin"
            android:textAppearance="@style/PropertyValueStyle"
            tools:text="Adetunji Ojekunle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_field"
            android:textAppearance="@style/PropertyLabelStyle" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/property_value_margin"
            android:textAppearance="@style/PropertyValueStyle"
            tools:text="ojekunleadetunji@gmail.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textAppearance="@style/PropertyLabelStyle" />

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/property_value_margin"
            android:textAppearance="@style/PropertyValueStyle"
            tools:text="Nigeria" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:textAppearance="@style/PropertyLabelStyle" />

        <TextView
            android:id="@+id/modelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/property_value_margin"
            android:textAppearance="@style/PropertyValueStyle"
            tools:text="Toyota Camry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textAllCaps="false"
            android:textAppearance="@style/PropertyLabelStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/property_value_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/colorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:textAppearance="@style/PropertyValueStyle"
                tools:text="Red" />

            <View
                android:id="@+id/colorDrawable"
                android:layout_width="8dp"
                android:layout_height="10dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/color_drawable"
                android:backgroundTint="@color/red" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textAppearance="@style/PropertyLabelStyle" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/property_value_margin"
            android:textAppearance="@style/PropertyValueStyle"
            tools:text="2017" />


        <TextView
            style="@style/PropertyLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_label" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/property_value_margin"
            android:textAppearance="@style/PropertyValueStyle"
            tools:text="Male" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textAppearance="@style/PropertyLabelStyle" />

        <TextView
            android:id="@+id/jobTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/property_value_margin"
            android:textAppearance="@style/PropertyValueStyle"
            tools:text="Product Designer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bio_label"
            android:textAppearance="@style/PropertyLabelStyle" />

        <TextView
            android:id="@+id/bioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/property_value_margin"
            android:textAppearance="@style/PropertyValueStyle"
            tools:text="@string/lipsum_text" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
