<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/list_item_margin"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:id="@+id/rangeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateRangeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/rangeLabelTextView"
            app:layout_constraintStart_toEndOf="@+id/rangeLabelTextView"
            tools:text="1990 - 2005" />

        <TextView
            android:id="@+id/genderLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gender"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rangeLabelTextView" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/genderLabelTextView"
            app:layout_constraintStart_toEndOf="@+id/genderLabelTextView"
            tools:text="Male" />

        <TextView
            android:id="@+id/countriesLabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/countries"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/countriesTextView"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/countriesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintBottom_toTopOf="@+id/colorsValueTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/countriesLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/genderTextView"
            tools:text="Brazil, Ireland, Egypt, Poland, Niger, Greece, Peru, Nicaragua" />

        <TextView
            android:id="@+id/colorsLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/colorsValueTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/colorsValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintStart_toEndOf="@+id/colorsLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/countriesTextView"
            tools:text="Blue, Black, Yellow, Red" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
